fixed alignment bug, now navigation bar has the same padding as the content depends on the screen sizes

--- a/src/styles/navBar.scss
+++ b/src/styles/navBar.scss
@@ -109,7 +109,7 @@
   }
 }
   
-@media (width > 1500px) {
+@media (min-width: 1501px) {
   #nav-bar-container {
     padding: 0 9em;
   }
